Make footer elements more responsive/Fix whitespace issue on low sizes due to row margin

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,10 @@ body {
     width: 100%;
 }
 
+.row {
+    margin: 0;
+}
+
 /* Header */
 
 header {
@@ -103,12 +107,11 @@ footer {
 
 footer .container {
     height:80px;
-    margin:0 0 0 10px;
-    padding:0;
+    padding:0 0 0 10px;
 }
 
 footer p {
-    margin:10px 0;
+    padding:10px 0;
 }
 
 .footer-row {
@@ -116,14 +119,16 @@ footer p {
     display:flex;
 }
 
+.footer-contact {
+    text-align: center;
+}
+
 .socials {
     position:absolute;
     right:0.5%;
     font-size: 1.5em;
     text-align: right;
-}
-.socials a {
-    padding-left:0.5%;
+
 }
 
 /* responsive elements */
@@ -140,6 +145,10 @@ footer p {
         margin: 0;
         font-size: 15px;
     }
+
+    .footer-row div p {
+        font-size: 15px;
+    }
 }
 
 @media screen and (max-width: 575.8px) {
@@ -154,6 +163,10 @@ footer p {
         margin: 0;
         font-size: 14px;
     }
+    
+    .footer-row div p {
+        font-size: 14px;
+    }
 }
 
 @media screen and (max-width: 450px) {
@@ -166,6 +179,14 @@ footer p {
         height: 37.5px;
         font-size: 10px;
         padding: 10px 0;
+    }
+
+    .footer-row div p {
+        font-size: 10px;
+    }
+
+    .fab {
+        font-size: 0.7em;
     }
 }
 
@@ -183,5 +204,13 @@ footer p {
 
     .nav-top li:last-child {
         margin-right: -18px;
+    }
+
+    .footer-row div p {
+        font-size: 9px;
+    }
+
+    .fab {
+        font-size: 0.6em;
     }
 }
